<resources>
    <string name="app_name">Jerry</string>
    <string name="full_app_name">Jerry, I wanted to talk to you about something...</string>
    <string name="full_full_app_name">Jerry, it\'s good that you called - I wanted to talk to you about something...</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_jerry">hello Jerry!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_show_agenda_during_call">ShowAgendaDuringCallActivity</string>
    <string name="loading">Loading...</string>
    <string name="agenda_field_hint">Reminder about this contact</string>
    <string name="send_to_jerry">Send to Jerry</string>
    <string name="agenda_title_hint">Reminder Title</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>


</resources>
